# jetson-inference

./: CMakeLists.txt
c/: detectNet.cpp  detectNet.cu  detectNet.h  tensorNet.cpp
examples/: CMakeLists.txt
examples/detectnet/: detectnet.cpp
examples/yolo_detect/: CMakeLists.txt  yolo_detect.cpp
